# fprime-zephyr-reference

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  fprime-gds.yml  prj.conf  requirements.txt  settings.ini
FprimeZephyrReference/: CMakeLists.txt
FprimeZephyrReference/Components/: CMakeLists.txt
FprimeZephyrReference/Components/FatalHandler/: FatalHandler.cpp  FatalHandler.fpp  FatalHandler.hpp
FprimeZephyrReference/ReferenceDeployment/: CMakeLists.txt  Main.cpp  README.md
FprimeZephyrReference/ReferenceDeployment/Top/: CMakeLists.txt  ReferenceDeploymentPackets.fppi  ReferenceDeploymentTopology.cpp  ReferenceDeploymentTopology.hpp  ReferenceDeploymentTopologyDefs.hpp  instances.fpp  topology.fpp
FprimeZephyrReference/project/config/: CMakeLists.txt  CdhCoreConfig.fpp  CdhCoreFatalHandlerConfig.fpp  CdhCoreTlmConfig.fpp  ComCcsdsConfig.fpp  FpConfig.h  MpuImuSubtopologyConfig.fpp  MpuImuSubtopologyConfig.hpp  TlmChanImplCfg.hpp  TlmPacketizerCfg.hpp
boards/: rpi_pico.overlay  rpi_pico2_rp2350a_m33.overlay  teensy41.overlay
docs/additional-resources/: board-list.md  specifying-board-configuration.md  troubleshooting.md  wsl-notes.md
docs/main-content/: build-flash-run.md  initial-setup.md
docs/uploading/: teensy.md
docs/uploading/stm32/: Arduino-STM32CubeProgrammer-Arm-Issue.md  stm32.md
fprime-zephyr-reference/: CMakeLists.txt
fprime-zephyr-reference/Components/FatalHandler/: FatalHandler.cpp  FatalHandler.hpp
fprime-zephyr-reference/ReferenceDeployment/: CMakeLists.txt  Main.cpp  README.md
(+15 files in other folders)
